--- a/do_an_tt/pages/cart.html
+++ b/do_an_tt/pages/cart.html
@@ -14,7 +14,7 @@
           <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light">
               <div class="container-fluid">
-                <a class="navbar-brand" href=""><img src="../assets/images/logo.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img src="../assets/images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                   aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Tìm mua xe</a>
+                      <a class="nav-link"  href="contact.html">Tìm mua xe</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Gửi bán xe</a>
